# separador-de-pdf

./: .gitignore  README.md  pyproject.toml
pdf_splitter/: drive_script.py  main.py
