[tool.poetry]
name = "pdf-splitter"
version = "0.1.0"
description = ""
authors = ["luis.henrique"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^3.0.1"
typer = "^0.9.0"
pydrive = "^1.3.1"
google-api-python-client = "^2.103.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
